force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/doctor__c.field-meta.xml
<CustomField>
    <fullName>doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>converse_app_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>