force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>converse_app_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>