force-app/main/default/objects/smagicinteract__Converse_App_Task__c/listViews/allSelection_Converse_App_Task.listView-meta.xml
<ListView>
    <fullName>allSelection_Converse_App_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>